# PiRadioApp

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.sh  PiRadioApp.sln  README.md  build.sh  control  database.json  database.txt  deploy.sh  example-database.json  help.json  install_enviroment.sh  package-lock.json  package.json  piradio.service  run.sh  test-database.json
PiRadioApp/: PiRadioApp.cpp  PiRadioApp.vcxproj  PiRadioApp.vcxproj.filters  WebEngine.hpp
PiRadioApp/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  AudioEngineManager.cpp  AudioEngineManager.hpp
PiRadioApp/DatabaseEngine/: DatabaseEngine.cpp  DatabaseEngine.hpp
PiRadioApp/Debug/: vc142.idb
PiRadioApp/Debug/PiRadioApp.tlog/: CL.command.1.tlog  CL.write.1.tlog  PiRadioApp.lastbuildstate
PiRadioApp/WebEngine/: PlayingManagementForm.cpp  PlayingManagementForm.hpp  StationsManagementForm.cpp  StationsManagementForm.hpp  UrlManagementForm.cpp  UrlManagementForm.hpp  WebEngine.cpp  WebEngine.hpp
PiRadioApp/x64/Debug/: vc142.idb
client/: .eslintrc.json  .stylelintrc  README.md  package-lock.json  package.json  webpack.config.base.babel.js  webpack.config.dev.babel.js
client/config/: webpack.config.base.babel.js  webpack.config.prod.babel.js
client/src/: ErrorBoundary.jsx  index.js
client/src/app/: App.jsx  constants.js  reducers.js
client/src/styles/: main.scss
dependencies/boost/lib/: libboost_atomic-vc142-mt-gd-x32-1_73.lib  libboost_atomic-vc142-mt-gd-x64-1_73.lib  libboost_atomic-vc142-mt-x32-1_73.lib  libboost_atomic-vc142-mt-x64-1_73.lib  libboost_chrono-vc142-mt-gd-x32-1_73.lib  libboost_chrono-vc142-mt-gd-x64-1_73.lib  libboost_chrono-vc142-mt-x32-1_73.lib  libboost_chrono-vc142-mt-x64-1_73.lib  libboost_container-vc142-mt-gd-x32-1_73.lib  libboost_container-vc142-mt-gd-x64-1_73.lib  libboost_container-vc142-mt-x32-1_73.lib  libboost_container-vc142-mt-x64-1_73.lib  libboost_context-vc142-mt-gd-x32-1_73.lib  libboost_context-vc142-mt-gd-x64-1_73.lib  libboost_context-vc142-mt-x32-1_73.lib  libboost_context-vc142-mt-x64-1_73.lib  libboost_contract-vc142-mt-gd-x32-1_73.lib  libboost_contract-vc142-mt-gd-x64-1_73.lib  libboost_contract-vc142-mt-x32-1_73.lib  libboost_contract-vc142-mt-x64-1_73.lib  libboost_coroutine-vc142-mt-gd-x32-1_73.lib  libboost_coroutine-vc142-mt-gd-x64-1_73.lib  libboost_coroutine-vc142-mt-x32-1_73.lib  libboost_coroutine-vc142-mt-x64-1_73.lib  libboost_date_time-vc142-mt-gd-x32-1_73.lib  libboost_date_time-vc142-mt-gd-x64-1_73.lib  libboost_date_time-vc142-mt-x32-1_73.lib  libboost_date_time-vc142-mt-x64-1_73.lib  libboost_exception-vc142-mt-gd-x32-1_73.lib  libboost_exception-vc142-mt-gd-x64-1_73.lib  libboost_exception-vc142-mt-x32-1_73.lib  libboost_exception-vc142-mt-x64-1_73.lib  libboost_fiber-vc142-mt-x32-1_73.lib  libboost_fiber-vc142-mt-x64-1_73.lib  libboost_filesystem-vc142-mt-x32-1_73.lib  libboost_filesystem-vc142-mt-x64-1_73.lib  libboost_iostreams-vc142-mt-gd-x32-1_73.lib  libboost_iostreams-vc142-mt-gd-x64-1_73.lib  libboost_iostreams-vc142-mt-x32-1_73.lib  libboost_iostreams-vc142-mt-x64-1_73.lib  (+57 more)
dependencies/gstreamer/include/: ffi-x86_64.h
dependencies/gstreamer/lib/: a52.lib  ass.lib  avcodec.lib  avfilter.lib  avformat.lib  avutil.lib  cairo-gobject.lib  cairo-script-interpreter.lib  cairo.lib  croco-0.6.lib  crypto.lib  dca.lib  dv.lib  expat.lib  flac.lib  fontconfig.lib  freetype.lib  fribidi.lib  gdk_pixbuf-2.0.lib  ges-1.0.lib  gnutlsxx.lib  graphene-1.0.lib  gstadaptivedemux-1.0.lib  gstallocators-1.0.lib  gstapp-1.0.lib  gstbasecamerabinsrc-1.0.lib  gstcheck-1.0.lib  gstcontroller-1.0.lib  gstfft-1.0.lib  gstgl-1.0.lib  gstinsertbin-1.0.lib  gstisoff-1.0.lib  gstmpegts-1.0.lib  gstphotography-1.0.lib  (+225 more)
docs/: Engine.md  README.md  Server.md  developer_manual.md  developer_manual_Install.md  engine.md  server.md  user_manual.md
engine/: PiRadioApp.cpp
engine-tests/: test-Database-json.cpp  test-Database.cpp  test-RadioCommMessage.cpp  test-main.cpp
engine-utests/: test_Database.cpp  test_IPCManager.cpp  test_IPCMessage.cpp
engine/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  AudioEngineManager.cpp  AudioEngineManager.hpp
engine/Communication/: Communication.cpp  Communication.hpp
engine/DatabaseEngine/: DatabaseEngine.hpp  Station.cpp  Station.hpp  StationsDatabaseTxt.cpp  StationsDatabaseTxt.hpp
engine/DebugMsg/: DebugMsg.hpp
engine/RadioManager/: RadioManager.cpp
engine/include/: Audio.hpp  AudioManager.hpp  Communication.hpp  Database.hpp  ExecArgs.hpp  Logs.hpp  Radio.hpp  RadioCommMessage.hpp  RadioIPCMessage.hpp  RadioManager.hpp  RadioRoutes.hpp  RadioStation.hpp  Station.hpp  dbStationJson.hpp  dbStationTxt.hpp
engine/source/: Audio.cpp  AudioEngine.cpp  AudioManager.cpp  CommEngine.cpp  CommManager.cpp  Communication.cpp  Logs.cpp  Radio.cpp  RadioIPCMessage.cpp  RadioManager.cpp  RadioRoutes.cpp  RadioStation.cpp  Station.cpp  dbStationJson.cpp  dbStationTxt.cpp
scripts/: README.md  build.sh  clean.sh  create_deb.sh  create_simple_app.sh  deploy-deb.sh  deploy-tar.sh  install_enviroment.sh  tar-deploy.sh  uninstall.sh
scripts/helpers/: piradio.conf  piradio.service  run.sh  run_simple_app.sh
server/: README.md  comm.go  log.go  server.go  server.html  server.js
server-api-tests/: __main__.py  tests.py
server/chess1.0/: index.html
server/front/: index.html
server/resources/: index.html  player.js  server.html  server.js  stations.js
source/: AudioEngine.cpp  AudioEngine.hpp  WebEngine.cpp  WebEngine.hpp  main.cpp
sources/: PiRadioApp.cpp
sources/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  AudioEngineManager.cpp  AudioEngineManager.hpp
sources/Communication/: Communication.cpp  Communication.hpp
sources/DatabaseEngine/: DatabaseEngine.hpp  Station.hpp  StationsDatabaseInterface.hpp  StationsDatabaseTxt.cpp  StationsDatabaseTxt.hpp
sources/DebugMsg/: DebugMsg.cpp
sources/RadioManager/: RadioManager.cpp  RadioManager.hpp
tests/: __main__.py  test_engine_ipc.py  test_server_api.py  testing.py
tests/engine-ipc-test/: __main__.py  test.py
(+537 files in other folders)
